feat: F51 Early Exit + board perf optimization — SQL filter, response cache, bulk reorder
F51 Early Exit Optimization:
- Day-by-day → math extrapolation beyond 130 workday horizon
- planEpicFast/planStoryFast/planRoughEstimateFast: O(roles) vs O(roles×assignees×days)
- PlannedEpic.approximate flag for approximate forecasts
- Planning cold start: 5-8s → 89ms (60x faster)

Board Performance (Runs 5-7):
- Two-path loading: teamIds → SQL filter (~400 issues vs 12K)
- Board response cache: 15s TTL ConcurrentHashMap, invalidation on reorder/sync
- Bulk reorder: single UPDATE vs N individual saves (2,119ms → 0.3ms)
- T5 migration: covering index (board_category, team_id, manual_order)
- Composite index (project_key, board_category)
- Board p50: 30s → 1ms, Throughput 4.8x increase

Perf testing:
- Realistic seed data: varied stories/subtasks, role patterns, weighted estimates
- 7 runs tracked in PERF_RESULTS.md with full analysis

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>